Bug fix - header z-index

--- a/src/css/modules/global/header.css
+++ b/src/css/modules/global/header.css
@@ -3,6 +3,7 @@
   width: 100%;
   background-color: var(--color-secondary);
   box-shadow: var(--box-shadow);
+  z-index: 1;
 
   position: fixed;
   top: 0;
